Fixed overflow on x

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-	overflow-x: none;
+	overflow-x: hidden;
 	padding: 0;
 	margin:0;
 	font-family: sans-serif;
